--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,20 @@
-# Node junk
+# Node
 node_modules/
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
 
-# Frontend build artifacts
-build/
+# Build artifacts
 dist/
-*.local
+build/
+temp/
+
+# Env files
+*.env
+.env.local
+.env.development
+.env.production
 
 # OS trash
 .DS_Store
 Thumbs.db
-
-# Env files
-*.env
