--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon server/index.js"
+    "dev": "nodemon server/index.js --host 0.0.0.0" 
   },
   "keywords": [],
   "author": "",
