--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,7 @@
     "cors": "^2.8.6",
     "crypto": "^1.0.1",
     "express": "^5.2.1",
-    "mediasoup": "^3.19.14",
-    "socket.io": "^4.8.3",
-    "uuid": "^13.0.0"
+    "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
